--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@ body {
 
 @font-face {
   font-family: "Nunito";
-  src: url("./assets/Nunito-Regular.ttf") format("ttf");
+  src: url("./assets/Nunito-Regular.ttf") format("truetype");
 }
 
 #app {
